added code for DLC

--- a/Limblab_DLC/3D reconstruction.ipynb
+++ b/Limblab_DLC/3D reconstruction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,10 +17,21 @@
     "\"\"\"\n",
     "import sys\n",
     "\n",
-    "# add calibration_folder to path\n",
+    "# add calibration_folder to path so that those functions can be used\n",
     "calib_folder = r'D:\\Lab\\GIT\\proc-joe\\Limblab_DLC\\cam_calib_20200508'\n",
-    "sys.path.append(calib_folder)\n",
     "\n",
+    "# set project folder \n",
+    "project_folder = r'D:\\Lab\\Data\\DLC_videos\\Handle_test\\Handle_test_20201201-Qiwei-2020-12-01'\n",
+    "\n",
+    "# determine if we are using filtered data or not\n",
+    "use_filtered_data = True\n",
+    "remove_triangulation = True\n",
+    "\n",
+    "# using reference frame or use an arbitrary frame?\n",
+    "use_reference_frame = False\n",
+    "\n",
+    "# imports and other stuff\n",
+    "sys.path.append(calib_folder)\n",
     "\n",
     "from utils.utils import load_config\n",
     "from calibration.intrinsic import calibrate_intrinsic\n",
@@ -31,52 +42,85 @@
     "from utils.triangulation_utils import add_static_points\n",
     "    \n",
     "import numpy as np\n",
-    "import toml"
+    "import toml\n",
+    "import glob\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# setup config file\n",
+    "# setup config file \n",
+    "# load basic toml folder and then fill out relevant entries\n",
+    "parsed_toml = toml.load(calib_folder + r'\\config_master.toml')\n",
     "\n",
-    "parsed_toml = toml.load(r'D:\\Lab\\GIT\\proc-joe\\Limblab_DLC\\cam_calib_20200508\\config_Crackle_20200922.toml')\n"
+    "# upate calib video path and prefix and extension\n",
+    "parsed_toml['calibration']['calib_video_path'] = r'D:\\Lab\\Data\\DLC_videos\\Handle_test\\calib'\n",
+    "parsed_toml['calibration']['calib_video_prefix'] = 'Han_20201123_calib_6in0000'\n",
+    "\n",
+    "# update paths to 2d data while removing (or keeping) videos with filtered\n",
+    "if(use_filtered_data):\n",
+    "    vid_list = glob.glob(project_folder + r'\\videos\\*filtered.csv')\n",
+    "else:\n",
+    "    vid_list_temp = glob.glob(project_folder + r'\\videos\\*.csv')\n",
+    "    vid_list = []\n",
+    "    for vid_name in vid_list_temp:\n",
+    "        if vid_name.find('filtered') == -1:\n",
+    "            vid_list.append(vid_name)\n",
+    "    \n",
+    "parsed_toml['paths_to_2d_data'] = vid_list\n",
+    "    \n",
+    "# update path to save static data\n",
+    "parsed_toml['path_to_save_static_data'] = project_folder\n",
+    "\n",
+    "# update output video path\n",
+    "parsed_toml['output_video_path'] = project_folder + r'\\reconstructed-3d-data'\n",
+    "\n",
+    "# update triangulation data (or remove if desired)\n",
+    "if(remove_triangulation):\n",
+    "    parsed_toml['triangulation'].pop('axes', None)\n",
+    "    parsed_toml['triangulation'].pop('reference_point', None)\n",
+    "# else, likely leave alone. Could fill this in if we change how we do reference points\n",
+    "\n",
+    "# update reconstruction output path and threshold\n",
+    "parsed_toml['triangulation']['reconstruction_threshold'] = 0.7 # 0.7 default\n",
+    "parsed_toml['triangulation']['reconstruction_output_path'] = project_folder + r'\\reconstructed-3d-data'\n",
+    "\n",
+    "# update labeling scheme and bodyparts interested\n",
+    "# only need to update if using something other than base arm points\n",
+    "parsed_toml['labeling']['scheme'] = []\n",
+    "parsed_toml['labeling']['bodyparts_interested'] = ['handle']\n",
+    "\n",
+    "toml_config_file = project_folder + r'\\recon_config.toml'\n",
+    "\n",
+    "with open(toml_config_file,'w+') as file:\n",
+    "    toml.dump(parsed_toml,file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['C:\\\\\\\\Users\\\\\\\\dongq\\\\\\\\DeepLabCut\\\\\\\\Han-Qiwei-2020-09-22-RT3D\\\\\\\\videos\\\\\\\\exp_han_00009DLC_resnet50_HanSep22shuffle1_1030000filtered.csv',\n",
-       " 'C:\\\\\\\\Users\\\\\\\\dongq\\\\\\\\DeepLabCut\\\\\\\\Han-Qiwei-2020-09-22-RT3D\\\\\\\\videos\\\\\\\\exp_han_00010DLC_resnet50_HanSep22shuffle1_1030000filtered.csv',\n",
-       " 'C:\\\\\\\\Users\\\\\\\\dongq\\\\\\\\DeepLabCut\\\\\\\\Han-Qiwei-2020-09-22-RT3D\\\\\\\\videos\\\\\\\\exp_han_00011DLC_resnet50_HanSep22shuffle1_1030000filtered.csv',\n",
-       " 'C:\\\\\\\\Users\\\\\\\\dongq\\\\\\\\DeepLabCut\\\\\\\\Han-Qiwei-2020-09-22-RT3D\\\\\\\\videos\\\\\\\\exp_han_00012DLC_resnet50_HanSep22shuffle1_1030000filtered.csv']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "intrinsics_1.toml already exists.\n",
+      "\n",
+      "intrinsics_2.toml already exists.\n",
+      "\n",
+      "extrinsics.toml already exists.\n"
+     ]
     }
    ],
    "source": [
-    "parsed_toml['paths_to_2d_data']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = load_config('config_Test_20201123_15in.toml' )\n",
+    "config = load_config(toml_config_file)\n",
     "#%% If you already ran calibration you don't need to run these.\n",
-    "\n",
     "calibrate_intrinsic(config)\n",
     "\n",
     "calibrate_extrinsic(config)"
@@ -84,30 +128,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████| 1730/1730 [00:00<00:00, 7214.30it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "labels = ['pointX', 'pointY', 'pointZ']\n",
+    "if(use_reference_frame):\n",
+    "    labels = ['pointX', 'pointY', 'pointZ']\n",
     "\n",
-    "snapshots = ['Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv',\n",
-    "             'Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv']\n",
+    "    snapshots = ['Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv',\n",
+    "                 'Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv']\n",
     "\n",
-    "static = {'pointX': [[497.1956159,477.1799594],[286.2408452,338.6374849]],\n",
-    "          'pointY': [[602.8473412,420.1615679],[606.4223067,301.0989688]],\n",
-    "          'pointZ': [[493.8415928,182.0259331],[274.6480682,95.18916682]]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "add_static_points(config, labels, static, snapshots)\n",
-    "# You can set 3D reconstruction output path through argument,\n",
-    "# reconstruct_3d(config, output_path='/media/minyoungpark/Min/1101')\n",
-    "# or skip it and set it in config file (reconstruction_output_folder_path).\n",
+    "    static = {'pointX': [[497.1956159,477.1799594],[286.2408452,338.6374849]],\n",
+    "              'pointY': [[602.8473412,420.1615679],[606.4223067,301.0989688]],\n",
+    "              'pointZ': [[493.8415928,182.0259331],[274.6480682,95.18916682]]}\n",
+    "    add_static_points(config, labels, static, snapshots)\n",
+    "\n",
+    "if(not os.path.isdir(parsed_toml['triangulation']['reconstruction_output_path'])):\n",
+    "    os.mkdir(parsed_toml['triangulation']['reconstruction_output_path'])\n",
+    "    \n",
+    "\n",
+    "    \n",
     "recovery = reconstruct_3d(config)"
    ]
   },
