--- a/Limblab_DLC/Pipeline-from-Qiwei.ipynb
+++ b/Limblab_DLC/Pipeline-from-Qiwei.ipynb
@@ -6,24 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:521: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:522: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:523: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -49,17 +31,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# convert config file to a linux friendly version\\nwith open(path_config_file) as file:\\n    orig_config = yaml.load(file, Loader=yaml.FullLoader)\\n\\n# change project_path to video_main_folder\\norig_config['project_path'] = video_project_folder\\n\\n# change video_sets\\n# so we need to build a new dictionary with the video filenames as keys and the crop as entries\\nvideos = glob.glob(video_project_folder + r'/videos/*.avi')\\nx=orig_config['video_sets']\\nx_keys = list(x.keys())\\nvideo_dict = {}\\nfor i in range(len(videos)):\\n    video_dict[videos[i]] = x[x_keys[i]]\\n    \\norig_config['video_sets'] = video_dict\\n\\n# save config as config_linux and point path_config_file to it\\nwith open(linux_config_file,'w') as file:\\n    yaml.dump(orig_config,file)\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "project = 'Han_202012'\n",
     "experimenter = 'Joe'\n",
-    "video_project_folder = '/home/jts3256/DLC_videos/Han_202012-Joe-2020-12-04'\n",
-    "path_config_file = video_project_folder + '/config.yaml'\n",
-    "linux_config_file = video_project_folder + '/config_linux.yaml'\n",
+    "video_project_folder = r'D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04'\n",
+    "path_config_file = video_project_folder + '\\config.yaml'\n",
+    "linux_config_file = video_project_folder + '\\config_linux.yaml'\n",
     "shutil.copyfile(path_config_file,linux_config_file)\n",
-    "\n",
+    "\"\"\"\n",
     "# convert config file to a linux friendly version\n",
     "with open(path_config_file) as file:\n",
     "    orig_config = yaml.load(file, Loader=yaml.FullLoader)\n",
@@ -80,7 +73,43 @@
     "\n",
     "# save config as config_linux and point path_config_file to it\n",
     "with open(linux_config_file,'w') as file:\n",
-    "    yaml.dump(orig_config,file)"
+    "    yaml.dump(orig_config,file)\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00006.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00007.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00008.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00009.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00010.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00011.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00012.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201203_00013.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00001.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00002.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00003.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00004.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00005.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00006.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00007.avi',\n",
+       " 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_reaching3D_202012\\\\Han_202012-Joe-2020-12-04\\\\videos\\\\Han_20201204_00008.avi']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "videos = glob.glob(video_project_folder + r'\\videos\\*.avi')\n",
+    "videos"
    ]
   },
   {
@@ -240,9 +269,94 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using snapshot-1030000 for model D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04\\dlc-models\\iteration-0\\Han_202012Dec4-trainset95shuffle1\n",
+      "Initializing ResNet\n",
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\envs\\DLC-GPU\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\envs\\DLC-GPU\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\envs\\DLC-GPU\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1266: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use standard file APIs to check for files with this prefix.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\envs\\DLC-GPU\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1266: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use standard file APIs to check for files with this prefix.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04\\dlc-models\\iteration-0\\Han_202012Dec4-trainset95shuffle1\\train\\snapshot-1030000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04\\dlc-models\\iteration-0\\Han_202012Dec4-trainset95shuffle1\\train\\snapshot-1030000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to analyze %  D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04\\videos\\Han_20201203_00006.avi\n",
+      "Loading  D:\\Lab\\Data\\DLC_videos\\Han_reaching3D_202012\\Han_202012-Joe-2020-12-04\\videos\\Han_20201203_00006.avi\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|                                                                                        | 0/24680 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duration of video [s]:  987.2 , recorded with  25.0 fps!\n",
+      "Overall # of frames:  24680  found with (before cropping) frame dimensions:  1280 1024\n",
+      "Starting to extract posture\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 12%|█████████▏                                                                   | 2952/24680 [06:17<49:39,  7.29it/s]"
+     ]
+    }
+   ],
    "source": [
-    "deeplabcut.analyze_videos(linux_config_file,videos, save_as_csv=True)"
+    "deeplabcut.analyze_videos(path_config_file,videos, save_as_csv=True)"
    ]
   },
   {
@@ -253,8 +367,8 @@
    },
    "outputs": [],
    "source": [
-    "deeplabcut.filterpredictions(linux_config_file,videos,filtertype='spline')\n",
-    "deeplabcut.plot_trajectories(linux_config_file,videos)\n",
+    "deeplabcut.filterpredictions(path_config_file,videos,filtertype='spline')\n",
+    "deeplabcut.plot_trajectories(path_config_file,videos)\n",
     "deeplabcut.create_labeled_video(path_config_file,videos,filtered=True)"
    ]
   },
@@ -300,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.9"
   },
   "varInspector": {
    "cols": {
