updated trim_video code to hopefully remove indexing bug

--- a/Limblab_DLC/3D reconstruction.ipynb
+++ b/Limblab_DLC/3D reconstruction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,14 @@
     "calib_folder = r'D:\\Lab\\GIT\\proc-joe\\Limblab_DLC\\cam_calib_20200508'\n",
     "\n",
     "# set project folder \n",
-    "project_folder = r'D:\\Lab\\Data\\DLC_videos\\Handle_test\\Handle_test_20201201-Qiwei-2020-12-01'\n",
+    "project_folder = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10'\n",
     "\n",
     "# determine if we are using filtered data or not\n",
     "use_filtered_data = True\n",
-    "remove_triangulation = True\n",
+    "remove_triangulation = False\n",
     "\n",
     "# using reference frame or use an arbitrary frame?\n",
-    "use_reference_frame = False\n",
+    "use_reference_frame = True\n",
     "\n",
     "# imports and other stuff\n",
     "sys.path.append(calib_folder)\n",
@@ -44,12 +44,13 @@
     "import numpy as np\n",
     "import toml\n",
     "import glob\n",
-    "import os"
+    "import os\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +59,8 @@
     "parsed_toml = toml.load(calib_folder + r'\\config_master.toml')\n",
     "\n",
     "# upate calib video path and prefix and extension\n",
-    "parsed_toml['calibration']['calib_video_path'] = r'D:\\Lab\\Data\\DLC_videos\\Handle_test\\calib'\n",
-    "parsed_toml['calibration']['calib_video_prefix'] = 'Han_20201123_calib_6in0000'\n",
+    "parsed_toml['calibration']['calib_video_path'] = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach\\Han_reaching-Joe-2020-12-10\\videos\\calib'\n",
+    "parsed_toml['calibration']['calib_video_prefix'] = 'Han_20201204_0000'\n",
     "\n",
     "# update paths to 2d data while removing (or keeping) videos with filtered\n",
     "if(use_filtered_data):\n",
@@ -74,7 +75,7 @@
     "parsed_toml['paths_to_2d_data'] = vid_list\n",
     "    \n",
     "# update path to save static data\n",
-    "parsed_toml['path_to_save_static_data'] = project_folder\n",
+    "parsed_toml['path_to_save_static_data'] = project_folder + r'\\videos'\n",
     "\n",
     "# update output video path\n",
     "parsed_toml['output_video_path'] = project_folder + r'\\reconstructed-3d-data'\n",
@@ -92,7 +93,7 @@
     "# update labeling scheme and bodyparts interested\n",
     "# only need to update if using something other than base arm points\n",
     "parsed_toml['labeling']['scheme'] = []\n",
-    "parsed_toml['labeling']['bodyparts_interested'] = ['handle']\n",
+    "parsed_toml['labeling']['bodyparts_interested'] = ['shoulder','elbow1','elbow2','wrist1','wrist2','hand1','hand2','hand3','pointX','pointY','pointZ']\n",
     "\n",
     "toml_config_file = project_folder + r'\\recon_config.toml'\n",
     "\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -114,12 +115,17 @@
       "\n",
       "intrinsics_2.toml already exists.\n",
       "\n",
+      "intrinsics_3.toml already exists.\n",
+      "\n",
+      "intrinsics_4.toml already exists.\n",
+      "\n",
       "extrinsics.toml already exists.\n"
      ]
     }
    ],
    "source": [
     "config = load_config(toml_config_file)\n",
+    "\n",
     "#%% If you already ran calibration you don't need to run these.\n",
     "calibrate_intrinsic(config)\n",
     "\n",
@@ -128,35 +134,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(use_reference_frame):\n",
+    "    labels = ['pointX', 'pointY', 'pointZ']\n",
+    "    \n",
+    "    snapshots = vid_list\n",
+    "\n",
+    "    # initialize static\n",
+    "    static = {label : [] for label in labels}\n",
+    "        \n",
+    "    # get labeled reference point for each camera and store in a new file, also copy over other tracking data\n",
+    "    # make sure to overwrite pointX, pointY, and pointZ if already exist\n",
+    "    # labeled reference point is in each csv file in each folder in project_folder + 'labeled-data'\n",
+    "    labeled_folder = project_folder + r'\\labeled-data'\n",
+    "    \n",
+    "    video_files = config['paths_to_2d_data']\n",
+    "    pointX_data = []; pointY_data = []; pointZ_data = [];\n",
+    "    \n",
+    "    for vid_idx in range(len(video_files)):\n",
+    "        video_name = os.path.split(video_files[vid_idx])[-1]\n",
+    "        DLC_matches = re.finditer(\"DLC\", video_name)\n",
+    "        DLC_idx = [match.start() for match in DLC_matches]\n",
+    "        DLC_idx = DLC_idx[-1] # use last one\n",
+    "    \n",
+    "        video_prefix = video_name[:DLC_idx]\n",
+    "    \n",
+    "        # only for today's testing session because we are doing 3D reconstruction on different data than we trained the model\n",
+    "        video_prefix = video_prefix + \"_trimmed\"\n",
+    "        \n",
+    "        path_to_folder = labeled_folder + '\\\\' + video_prefix\n",
+    "        csv_file = glob.glob(path_to_folder+ '\\\\*.csv')[0]\n",
+    "        data = pd.read_csv(csv_file, header=[1,2], index_col=0)\n",
+    "    \n",
+    "        # get (x,y) for each label Store in Static properly\n",
+    "        \n",
+    "        for label in labels:\n",
+    "            x = data[(label, 'x')].values[~np.isnan(data[(label, 'x')].values)]\n",
+    "            y = data[(label, 'y')].values[~np.isnan(data[(label, 'y')].values)]\n",
+    "            x = x[0] # only get first labels\n",
+    "            y = y[0]\n",
+    "            static[label].append([x,y])\n",
+    "\n",
+    "    \n",
+    "    add_static_points(config, labels, static, snapshots)\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████| 1730/1730 [00:00<00:00, 7214.30it/s]\n"
+      "100%|██████████████████████████| 29492/29492 [00:33<00:00, 881.70it/s]\n"
      ]
     }
    ],
    "source": [
-    "if(use_reference_frame):\n",
-    "    labels = ['pointX', 'pointY', 'pointZ']\n",
-    "\n",
-    "    snapshots = ['Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv',\n",
-    "                 'Han_20201123_test_15in00001DLC_resnet50_TestNov23shuffle1_1030000filtered.csv']\n",
-    "\n",
-    "    static = {'pointX': [[497.1956159,477.1799594],[286.2408452,338.6374849]],\n",
-    "              'pointY': [[602.8473412,420.1615679],[606.4223067,301.0989688]],\n",
-    "              'pointZ': [[493.8415928,182.0259331],[274.6480682,95.18916682]]}\n",
-    "    add_static_points(config, labels, static, snapshots)\n",
-    "\n",
     "if(not os.path.isdir(parsed_toml['triangulation']['reconstruction_output_path'])):\n",
     "    os.mkdir(parsed_toml['triangulation']['reconstruction_output_path'])\n",
     "    \n",
-    "\n",
-    "    \n",
     "recovery = reconstruct_3d(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'paths_to_2d_data': ['D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos\\\\Han_20201204_00005DLC_resnet50_Han_202012Dec4shuffle1_1030000_filtered.csv',\n",
+       "  'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos\\\\Han_20201204_00006DLC_resnet50_Han_202012Dec4shuffle1_1030000_filtered.csv',\n",
+       "  'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos\\\\Han_20201204_00007DLC_resnet50_Han_202012Dec4shuffle1_1030000_filtered.csv',\n",
+       "  'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos\\\\Han_20201204_00008DLC_resnet50_Han_202012Dec4shuffle1_1030000_filtered.csv'],\n",
+       " 'path_to_save_static_data': 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos',\n",
+       " 'output_video_path': 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\reconstructed-3d-data',\n",
+       " 'video': {'fps': 25, 'resolution': [1280, 1024]},\n",
+       " 'calibration': {'board_type': 'charuco',\n",
+       "  'board_size': [5, 7],\n",
+       "  'board_marker_bits': 6,\n",
+       "  'board_marker_dict_number': 50,\n",
+       "  'board_marker_length': 23.17,\n",
+       "  'board_square_side_length': 38.43,\n",
+       "  'calib_video_path': 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\videos\\\\calib',\n",
+       "  'calib_video_prefix': 'Han_20201204_0000',\n",
+       "  'video_extension': 'avi'},\n",
+       " 'triangulation': {'cam_align': '1',\n",
+       "  'reconstruction_threshold': 0.7,\n",
+       "  'reconstruction_output_path': 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_reaching-Joe-2020-12-10\\\\reconstructed-3d-data',\n",
+       "  'optim': False},\n",
+       " 'labeling': {'scheme': [],\n",
+       "  'bodyparts_interested': ['shoulder',\n",
+       "   'elbow1',\n",
+       "   'elbow2',\n",
+       "   'wrist1',\n",
+       "   'wrist2',\n",
+       "   'hand1',\n",
+       "   'hand2',\n",
+       "   'hand3',\n",
+       "   'pointX',\n",
+       "   'pointY',\n",
+       "   'pointZ']},\n",
+       " 'filter': {'enabled': False,\n",
+       "  'medfilt': 13,\n",
+       "  'offset_threshold': 25,\n",
+       "  'score_threshold': 0.8,\n",
+       "  'spline': True}}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config"
    ]
   },
   {
