--- a/Limblab_DLC/Label-videos.ipynb
+++ b/Limblab_DLC/Label-videos.ipynb
@@ -15,7 +15,33 @@
     "from scp import SCPClient\n",
     "import getpass\n",
     "\n",
-    "import os"
+    "import os\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00001_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00002_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00003_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00004_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00005_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00006_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00007_trimmed.avi', 'D:\\\\Lab\\\\Data\\\\DLC_videos\\\\Han_20201204_rwFreeReach\\\\Han_20201204_00008_trimmed.avi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"proj_folder = r'D:\\Lab\\Data\\DLC_videos\\Han_20201204_rwFreeReach'\n",
+    "task='Han_reaching'\n",
+    "experimenter='Joe'\n",
+    "\n",
+    "video = glob.glob(proj_folder + '\\*.avi')\n",
+    "print(video)\n",
+    "config_file = deeplabcut.create_new_project(task,experimenter,video, working_directory=proj_folder,copy_videos=True)\n",
+    "deeplabcut.extract_frames(config_file,'automatic',crop=False)\n",
+    "\"\"\""
    ]
   },
   {
@@ -71,7 +97,7 @@
     "\"\"\"\n",
     "label frames\n",
     "\"\"\"\n",
-    "#local_config_path = r'D:\\Lab\\Data\\DLC_videos\\Crackle-Qiwei-2020-12-03\\config.yaml'\n",
+    "local_config_path = r'D:\\Lab\\Data\\DLC_videos\\Crackle-Qiwei-2020-12-03\\config.yaml'\n",
     "deeplabcut.label_frames(local_config_path,imtypes=['*png'])"
    ]
   },
