updated trim_video code to hopefully remove indexing bug

--- a/Limblab_DLC/trim_video.ipynb
+++ b/Limblab_DLC/trim_video.ipynb
@@ -499,12 +499,12 @@
     "            ####################################################################\n",
     "            if(add_frame_nums):\n",
     "                cv2.putText(frame, str(k-start_frame+1), (20, 20) ,cv2.FONT_HERSHEY_SIMPLEX ,0.8, color,2)\n",
-    "                t = (ts_list[i][k] - ts_list[i][start_frame])/1000000\n",
+    "                t = (ts_list[video_file_list_idx[i]][k] - ts_list[video_file_list_idx[i]][start_frame])/1000000\n",
     "                cv2.putText(frame, str(round(t, 3)), (120, 20) ,cv2.FONT_HERSHEY_SIMPLEX ,0.8, color,2)\n",
     "                \n",
     "            # -- Write to the video file -- #\n",
     "            frame_list.append(k)\n",
-    "            timestamp_list.append(ts_list[i][k])\n",
+    "            timestamp_list.append(ts_list[video_file_list_idx[i]][k])\n",
     "            video_writers[writer_no].write(frame)\n",
     "        elif not success:\n",
     "            print(\"failed to read\")\n",
